<resources>
    <string name="app_name">film applicatie</string>

    <string name="summary_text">Summary</string>
    <string name="genre_text">Genre</string>
    <string name="language_text">Language</string>
    <string name="eighteenPlus_text">18+</string>
    <string name="releaseDate_text">Release date</string>
    <string name="rating_text">Rating</string>

    <string name="sortAlphabetically_text">Alphabetical</string>
    <string name="sortMostPopular_text">Most Popular</string>
    <string name="sortLeastPopular_text">Least Popular</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="add_review_button">Review </string>
    <string name="add_toList_button">Add  </string>

    <!-- Genres -->
    <string name="genre_action">Action</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_historical">Historical</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_western">Western</string>
    <string name="add_to_list">add to list</string>
    <string name="give_rating">Give rating</string>
    <string name="schrijf_hier_je_review">Schrijf hier je review</string>
    <string name="plaats_hier_je_review">Plaats hier je review</string>
    <string name="home">Home</string>
    <string name="_home">Home</string>
    <string name="movies">Movies</string>
    <string name="list">List</string>
    <string name="zoeken">zoeken</string>
    <string name="zoek_naar">zoek_naar</string>
    <string name="_1234578">1234578</string>
    <string name="testuser">TestUser</string>

</resources>
