<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/Movie_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        />


    <TextView
        android:id="@+id/review_detail_textview_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/plaats_hier_je_review" />

    <EditText
        android:id="@+id/review_detail_editText_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/schrijf_hier_je_review"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/give_rating"
        android:id="@+id/rating"/>

    <Button
        android:id="@+id/review_detail_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_list"
        />



</LinearLayout>