<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single"
        app:showAsAction="always|collapseActionView">
        <item android:id="@+id/menu_sort_alphabetical"
            android:title="@string/sortAlphabetically_text"/>
<!--            android:onClick="onRadioButtonClicked"-->

        <item android:id="@+id/menu_sort_most_popular"
            android:title="@string/sortMostPopular_text"/>
<!--            android:onClick="onRadioButtonClicked"-->

        <item android:id="@+id/menu_sort_least_popular"
            android:title="@string/sortLeastPopular_text"/>
<!--            android:onClick="onRadioButtonClicked"-->

    </group>

</menu>