<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie.MovieDetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#faf7f7">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_review_button"
            android:drawableRight="@drawable/ic_rate_review"
            android:id="@+id/reviewButton"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_list_add"
            android:text="@string/add_toList_button"
            android:id="@+id/listAdd"></Button>
    </LinearLayout>
        <ImageView
            android:id="@+id/poster_imageview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="20sp">

        </ImageView>

        <TextView
            android:id="@+id/movie_title_in"
            android:textColor="#242222"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="35sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center_horizontal">
        </TextView>

        <TextView
            android:id="@+id/movie_summary"
            android:text="@string/summary_text"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center_horizontal">
        </TextView>

        <TextView
            android:id="@+id/movie_summary_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/genre_text"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/movie_genre_in"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/movie_language"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/language_text"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/movie_language_in"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/movie_eighteenPlus"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/eighteenPlus_text"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/movie_eighteenPlus_in"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/movie_releaseDate"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/releaseDate_text"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/movie_releaseDate_in"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/movie_runtime"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/runtime_text"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/movie_runtime_in"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/movie_budget"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/budget_text"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/movie_budget_in"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="match_parent">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/movie_revenue"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/revenue_text"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/movie_revenue_in"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="match_parent">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/vote_count"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:text="Vote count"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold">
                </TextView>


                <TextView
                    android:id="@+id/vote_count_in"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:layout_height="match_parent"
                    android:textStyle="bold">
                </TextView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/vote_average"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="vote_average"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/Vote_average_in"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:layout_height="match_parent">
                </TextView>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</ScrollView>